Add index view plus username replace email in signup

--- a/app/views/Users/new.erb
+++ b/app/views/Users/new.erb
@@ -2,8 +2,8 @@
   <form method="post" action="/users">
     <h3>Create an account.</h3>
 
-    <label><b>Email: </b></label>
-    <input type="text" placeholder="Enter Email" name="user[email]" required>
+    <label><b>Username: </b></label>
+    <input type="text" placeholder="Username" name="user[username]" required>
     <br />
 
     <label><b>Password: </b></label>
