add title and fixed placeholder values

--- a/app/views/questions/new.erb
+++ b/app/views/questions/new.erb
@@ -1,10 +1,10 @@
 <form method="post" action="/users">
     <h3>Create a Comment.</h3>
-    <label><b>Body: </b></label>
-    <input type="text" placeholder="Enter First Name" name="question[body]" required>
+    <label><b>Title: </b></label>
+    <input type="text" placeholder="Title" name="question[title]" required>
     <br />
-    <label><b>Username: </b></label>
-    <input type="text" placeholder="Enter Last Name" name="question[Poster]" required>
+    <label><b>Body: </b></label>
+    <input type="text" placeholder="body" name="question[body]" required>
     <br />
     <div class="clearfix">
       <button type="submit" class="signupbtn">Post</button>
