configure the question to use a partial instead

--- a/app/views/questions/new.erb
+++ b/app/views/questions/new.erb
@@ -1,13 +1,4 @@
-<form method="post" action="/users">
-    <h3>Create a Comment.</h3>
-    <label><b>Title: </b></label>
-    <input type="text" placeholder="Title" name="question[title]" required>
-    <br />
-    <label><b>Body: </b></label>
-    <input type="text" placeholder="body" name="question[body]" required>
-    <br />
-    <div class="clearfix">
-      <button type="submit" class="signupbtn">Post</button>
-    </div>
-  </div>
-</form>
+<article class="question">
+    <h3>Create a Question.</h3>
+    <%= erb :'_qac'  , :layout => false  %>
+</article>
