edit question comments and answers in new view to have form tag and romove the title form partial

--- a/app/views/questions/new.erb
+++ b/app/views/questions/new.erb
@@ -1,5 +1,8 @@
 <article class="question">
-    <h3>Create a Question.</h3>
-
+    <h3>Create a question.</h3>
+    <form method="post" action="/questions">
+    <label><b>Title: </b></label>
+    <input type="text" placeholder="Title" name="post[title]" required>
+    <br />
     <%= erb :'_qac'  , :layout => false  %>
 </article>
