--- a/app/views/answers/new.erb
+++ b/app/views/answers/new.erb
@@ -1,4 +1,5 @@
 <article class="answers">
-    <h3>Create a Question.</h3>
+    <h3>Create a answer.</h3>
+    <form method="post" action="/questions">
     <%= erb :'_qac'  , :layout => false  %>
 </article>
