--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -25,7 +25,7 @@
       <% if @user %>
         <a href="/users/#{@user.id}"></a>
         <% else %>
-        <a href="/sessions/new">Login</a>
+        <a href="/sessions">Login</a>
         <a href="/users/new">Register</a>
       <% end %>
   </div>
