--- a/app/views/questions/index.erb
+++ b/app/views/questions/index.erb
@@ -6,20 +6,17 @@
       <tr>
         <th>Title</th>
         <th>Body</th>
-        <th>Username</th>
         <th>Posted At</th>
-        <th>Vote Count</th>
       </tr>
 <% @questions.each do |question| %>
   <form method="question" action='/questions/<%= question.id %>/vote' class="inline">
     <button type="submit" name="submit_param" value="submit_value" class="upvote-button"></button>
   </form>
     <tr id="<%= question.id %>">
-      <td class='title'><%= question.title %><a href='/questions/<%= question.id %>'>show</a></td>
+      <td class='title'><a href='/questions/<%= question.id %>'><%= question.title %></a></td>
       <td class='body'><%= question.body %></td>
-      <td class='username'><%= question.username %></td>
       <td class='posted-at'><%= question.created_at %></td>
-      <td class='points'><%= question.vote_count %></td>
+
     </tr>
     <a class="delete" href='/questions/<%= question.id %>'></a>
 <% end %>
