fixed the index view for questions

--- a/app/views/questions/index.erb
+++ b/app/views/questions/index.erb
@@ -1,24 +1,20 @@
 <div class="container">
 <h1>Question Posting</h1>
 <h3>questions</h3>
-<table style="width:auto; border: 1px solid black;
-    ">
-      <tr>
-        <th>Title</th>
-        <th>Body</th>
-        <th>Posted At</th>
-      </tr>
 <% @questions.each do |question| %>
-  <form method="question" action='/questions/<%= question.id %>/vote' class="inline">
-    <button type="submit" name="submit_param" value="submit_value" class="upvote-button"></button>
-  </form>
-    <tr id="<%= question.id %>">
-      <td class='title'><a href='/questions/<%= question.id %>'><%= question.title %></a></td>
-      <td class='body'><%= question.body %></td>
-      <td class='posted-at'><%= question.created_at %></td>
-
-    </tr>
-    <a class="delete" href='/questions/<%= question.id %>'></a>
+  <div class="question-container">
+    <article id="<%= question.id %>">
+    <form method="question" action='/questions/<%= question.id %>/vote' class="inline">
+      <button type="submit" name="submit_param" value="submit_value" class="upvote-button">^</button>
+    </form>
+    <h2><a href='/questions/<%= question.id %>'><%= question.title %></a></h2>
+    <a class="delete" href='/questions/<%= question.id %>'>X</a>
+    <p>
+      <span class='Body'><%= question.body %></span>
+      <span class='Body'><strong>Posted At:</strong> <%= question.updated_at %></span>
+    </p>
+    </article>
+  </div>
 <% end %>
 </table>
 </div>
