make a partial to display questions on index page and modify index controller and views accordingly

--- a/app/views/questions/index.erb
+++ b/app/views/questions/index.erb
@@ -1,20 +1,3 @@
 <div class="container">
-<h1>Question Posting</h1>
-<h3>questions</h3>
-<% @questions.each do |question| %>
-  <div class="question-container">
-    <article id="<%= question.id %>">
-    <form method="question" action='/questions/<%= question.id %>/vote' class="inline">
-      <button type="submit" name="submit_param" value="submit_value" class="upvote-button">^</button>
-    </form>
-    <h2><a href='/questions/<%= question.id %>'><%= question.title %></a></h2>
-    <a class="delete" href='/questions/<%= question.id %>'>X</a>
-    <p>
-      <span class='Body'><%= question.body %></span>
-      <span class='Body'><strong>Posted At:</strong> <%= question.updated_at %></span>
-    </p>
-    </article>
-  </div>
-<% end %>
-</table>
+  <%= erb :'_main' %>
 </div>
