modify index and show

--- a/app/views/questions/index.erb
+++ b/app/views/questions/index.erb
@@ -5,7 +5,10 @@
   <div class="question-container">
     <article id="<%= question.id %>">
     <form method="question" action='/questions/<%= question.id %>/vote' class="inline">
-      <button type="submit" name="submit_param" value="submit_value" class="upvote-button">^</button>
+      <button type="submit" name="submit_param" value="submit_value" class="upvote-button">⬆</button>
+    </form>
+    <form method="question" action='/questions/<%= question.id %>/vote' class="inline">
+      <button type="submit" name="submit_param" value="submit_value" class="upvote-button">⬇</button>
     </form>
     <h2><a href='/questions/<%= question.id %>'><%= question.title %></a></h2>
     <a class="delete" href='/questions/<%= question.id %>'>X</a>
