--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -6,6 +6,7 @@
   <h2><%= @question.title %></a></h2>
   <p>
     <span class='Body'><%= @question.body %></span>
+    <span class='Body'><strong>Posted At:</strong> <%= @question.updated_at %></span>
   </p>
 </article>
 </div>
